2020-11-07  6.9.11-38  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-38 GIT revision 16...

2020-11-07  6.9.11-38  <quetzlzacatenango@image...>
  * add image settings support to -fx.
  * verify TTF glyph format before dereferencing (reference
    https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=26932).
  * force single HEIC image per container.

2020-11-07  6.9.11-37  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-37 GIT revision 16011:4d139b73c:20201107

2020-11-07  6.9.11-36  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-36 GIT revision 16008:9f3b8ffe4:20201107

2020-11-02  6.9.11-36  <quetzlzacatenango@image...>
  * do not add entropy based on mkstemp() unique filename.

2020-10-31  6.9.11-35  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-35 GIT revision 16002:56875b029:20201031.

2020-10-14  6.9.11-35  <quetzlzacatenango@image...>
  * prefer ffmpeg over avconv.

2020-10-08  6.9.11-34  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-34 GIT revision 15954:c4594f039:20201008

2020-10-05  6.9.11-34  <quetzlzacatenango@image...>
  * check for linux-compatible sendfile().

2020-10-04  6.9.11-33  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-33 GIT revision 15943:757c9b18e:20201004

2020-10-04  6.9.11-33  <quetzlzacatenango@image...>
  * miscellaneous clean-up.

2020-10-02  6.9.11-32  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-32 GIT revision 15931:ee2342eaf:20201002

2020-09-27  6.9.11-32  <quetzlzacatenango@image...>
  * enable WMF for module build.

2020-09-26  6.9.11-31  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-31 GIT revision 15914:f6814fe52:20200926

2020-09-20  6.9.11-31  <quetzlzacatenango@image...>
  * Add support for APNG (specify explicitly, e.g. apng:animate.png).
  * Add support for WEBM.

2020-09-17  6.9.11-30  <quetzlzacatenango@image...>